# webuntis-alarm

./: Cargo.toml  LICENSE  README.md
data/: table.json
src/: config.rs  main.rs  service.rs  table.rs
