[package]
name = "untis-wake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = {version="4.0.29", features=["env", "derive"]}
dotenvy = "0.15.6"
reqwest = {version="0.11.13", features=["blocking", "cookies"]}
serde_json = "1.0.89"
actix-web = {version="4", features=["rustls"]}
chrono = {version="0.4.23", features=["serde"]}
serde = {version="1.0.150", features=["derive"]}
tokio = {version="1.0", features=["full"]}
pretty_env_logger = "0.4.0"
log = "0.4.17"
rustls = "0.20.2"
rustls-pemfile = "1"